--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-fast-marquee": "^1.6.2",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.11.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "autoprefixer": "latest",
